# google-classroom-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: auth.rs  calendar.rs  classroom.rs  cli.rs  drive.rs  error.rs  formatters.rs  main.rs  output.rs  tools.rs
